--- a/app/src/main/res/layout/activity_new_figure.xml
+++ b/app/src/main/res/layout/activity_new_figure.xml
@@ -160,12 +160,13 @@
         android:id="@+id/button15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="19dp"
         android:onClick="tomarFoto"
         android:text="Take Photo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/button17" />
 
     <Button
         android:id="@+id/button17"
